// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RotateDocument component Should render without crashing 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <WithStyles(ForwardRef(IconButton))
    id="RotateLeft"
    onClick={[Function]}
    title="Rotate document left"
  >
    <RotateLeftIcon
      style={
        Object {
          "border": "2px solid",
          "borderRadius": "5px",
        }
      }
    />
  </WithStyles(ForwardRef(IconButton))>
  <WithStyles(ForwardRef(IconButton))
    id="RotateRight"
    onClick={[Function]}
    title="Rotate document right"
  >
    <RotateRightIcon
      style={
        Object {
          "border": "2px solid",
          "borderRadius": "5px",
        }
      }
    />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`RotateDocument component Should render without crashing with mode param 1`] = `
<WithStyles(ForwardRef(IconButton))
  id="RotateRight"
  onClick={[Function]}
  title="Rotate document right"
>
  <RotateRightIcon
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
      }
    }
  />
</WithStyles(ForwardRef(IconButton))>
`;

exports[`RotateDocument component Should render without crashing with mode param 2`] = `
<WithStyles(ForwardRef(IconButton))
  id="RotateLeft"
  onClick={[Function]}
  title="Rotate document left"
>
  <RotateLeftIcon
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
      }
    }
  />
</WithStyles(ForwardRef(IconButton))>
`;

exports[`RotateDocument component Should render without crashing with mode param 3`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <WithStyles(ForwardRef(IconButton))
    id="RotateLeft"
    onClick={[Function]}
    title="Rotate document left"
  >
    <RotateLeftIcon
      style={
        Object {
          "border": "2px solid",
          "borderRadius": "5px",
        }
      }
    />
  </WithStyles(ForwardRef(IconButton))>
  <WithStyles(ForwardRef(IconButton))
    id="RotateRight"
    onClick={[Function]}
    title="Rotate document right"
  >
    <RotateRightIcon
      style={
        Object {
          "border": "2px solid",
          "borderRadius": "5px",
        }
      }
    />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;
